--- a/src/Wishlist.Web/Views/Wishlist/Browse.cshtml
+++ b/src/Wishlist.Web/Views/Wishlist/Browse.cshtml
@@ -5,12 +5,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Wishlist</h2>
+<h2>Shared Wishlist</h2>
 
-<p>
-    @Html.ActionLink("Add Item", "Create")
-    @Html.ActionLink("Share My List", "Share",null,new { style="margin-left:20px"})
-</p>
 <table class="table">
     <tr>
         <th>
@@ -25,7 +21,6 @@
         <th>
             @Html.DisplayNameFor(model => model.CreatedOn)
         </th>
-        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -45,11 +40,6 @@
             </td>
             <td>
                 @item.CreatedOn.Format(true)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-                <button type="button" onclick="_delete(@item.Id)" class="btn btn-danger">Delete</button>
             </td>
         </tr>
     }
