--- a/src/Wishlist.Web/Views/Wishlist/Create.cshtml
+++ b/src/Wishlist.Web/Views/Wishlist/Create.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Add to wishlist</h2>
 
 @using (Html.BeginForm("create","wishlist",FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>ItemViewModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -24,7 +23,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ImageFile, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" name="ImageFile" class="form-control"/>
+            <input type="file" name="ImageFile" class="form-control" />
             @Html.ValidationMessageFor(model => model.ImageFile, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -35,10 +34,19 @@
             @Html.ValidationMessageFor(model => model.BuyUrl, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label>
+                    @Html.CheckBoxFor(model => model.IsPurchased, new { htmlAttributes = new { @class = "form-control" } })Is Purchased?
+                </label>
+            </div>
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Add" class="btn btn-default" />
         </div>
     </div>
 </div>
